# File-Time-Machine

./: Cargo.toml  README.md  test.sh
.github/workflows/: build-linux.yml  build-release.yml  build-windows.yml  osv-scanner.yml  semgrep.yml
demo.bak/: config.json
gui/: gui.py
src/: compression.rs  diffs.rs  main.rs  metadata_manager.rs  restore.rs
